# GNSS-DualRTK-Heading

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-TW.md  package.xml
config/: gnss_dualrtk.yaml
launch/: dual_gps_serial.launch  dual_gps_topic_test.launch  dualrtk_heading.launch
src/: dualrtk_heading_node.cpp
